fix: don't wrap links in <a> twice in Button

--- a/packages/core/Button/Button.module.css
+++ b/packages/core/Button/Button.module.css
@@ -4,6 +4,7 @@
   border: none;
   border-radius: 4px;
   color: white;
+  display: block;
   letter-spacing: 0.05ch;
   font-size: 14px;
   font-weight: 600;
